2005-08-25 Paul Jakma <paul@jakma.org>

	* configure.ac: Add -fno-omit-frame-pointer after -Os in default
	  cflags, just to be sure.
	  Fedora's readline library does not itself link to termcap, hence
	  we must pass the result of termcap tests in via OTHER-LIBRARIES
	  argument, otherwise the test of main in readline will fail due to 
	  missing termcap systems. On systems like Debian, -ltermcap
	  is not needed for the readline test, because libreadline already
	  links to it.
	  
2005-08-25 Hasso Tepper <hasso at quagga.net>

	* configure.ac, vtysh/Makefile.am: Only vtysh needs to be linked
	  against libreadline and friends.

2005-08-13 Paul Jakma <paul@jakma.org>

	* Makefile.am: (EXTRA_DIST) Add the trailing slash back in which
	  greg left out - tools bits weren't being included in dist,
	  which broke rpm builds :).

2005-08-10  Greg Troxel  <gdt@fnord.ir.bbn.com>

	* Makefile.am (EXTRA_DIST): add INSTALL.quagga.txt, because people
	that patch releases need to know about autoconf required versions.

2005-06-30 Louis Lagendijk <louis.lagendijk@gmail.com>

	* configure.ac: Actually test whether libc has IPv6 support.

2005-06-28 Paul Jakma <paul.jakma@sun.com>

	* INSTALL.quagga.txt: GNU make is required now, because of manual
	  automatic rules in solaris/Makefile.am. (If someone knows how
	  to do these in a better way..).
	  GNU AWK is required for CVS checkout builds.

2005-06-01 Paul Jakma <paul.jakma@sun.com>

	* NEWS: bgpd work queues and ripd auth-mode change

2005-05-07 Yar Tikhiy <yar@comp.chem.msu.su>

	* configure.ac: Check for OSes which support passing ifindex in
	  struct ip_mreq.

2005-04-29 Paul Jakma <paul.jakma@sun.com>

	* NEWS: Added some more 0.99 news.
	* configure.ac: bump to 0.99.1 (0.99.0 was never released except
	  via CVS snapshots)

2005-04-25 Paul Jakma <paul.jakma@sun.com>

	* HACKING: Add some notes about build system changes, to
	  document common oversights (common for me anyway).